--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_grey">#FFDFDFDF</color>
+    <color name="egyptian_blue">#FF0E34A0</color>
+    <color name="dark_grey">#FF343434</color>
 </resources>
