Updated design. TODO : Add code for functionalities, link elements together.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="light_grey">#FFDFDFDF</color>
     <color name="egyptian_blue">#FF0E34A0</color>
     <color name="dark_grey">#FF343434</color>
+    <color name="tart_orange">#FFFF4242</color>
 </resources>
