--- a/app/src/main/res/drawable/bg_calc_buttons.xml
+++ b/app/src/main/res/drawable/bg_calc_buttons.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="?attr/colorControlHighlight">
     <item>
         <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="oval">
             <solid android:color="@color/light_grey"/>
             <size android:width="30dp" android:height="30dp"/>
         </shape>
     </item>
-</selector>
+</ripple>
