--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,36 @@
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="30">
+        android:layout_weight="10"
+        android:orientation="vertical">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="5"
+            android:layout_marginRight="5dp"
+            android:background="@null"
+            android:text="8÷2*2+2"
+            android:textAlignment="textEnd"
+            android:textSize="40sp"
+            android:inputType="none"
+            ></EditText>
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Hello"></TextView>
+            android:layout_marginRight="5dp"
+            android:text="123"
+            android:textAlignment="textEnd"
+            android:textSize="22sp"></TextView>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
         <View
@@ -34,7 +52,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:src="@drawable/abc_vector_test"></ImageButton>
+            android:layout_marginRight="5dp"
+            android:src="@drawable/ic_delete_button"
+            android:background="?attr/selectableItemBackgroundBorderless"></ImageButton>
     </LinearLayout>
 
     <LinearLayout
@@ -54,52 +74,56 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/button_text_number_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="7">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="7"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/button_text_number_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="8">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="8"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/button_text_number_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="9">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="9"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/egyptian_blue"
+                android:textColor="@color/button_text_operation_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="+">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="+"
+                android:textSize="@dimen/button_text_size">
             </Button>
         </LinearLayout>
 
@@ -113,52 +137,56 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/button_text_number_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="4">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="4"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/button_text_number_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="5">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="5"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/button_text_number_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="6">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="6"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/egyptian_blue"
+                android:textColor="@color/button_text_operation_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="-">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="−"
+                android:textSize="@dimen/button_text_size">
             </Button>
         </LinearLayout>
 
@@ -172,52 +200,56 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/button_text_number_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="1">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="1"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/button_text_number_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="2">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="2"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/button_text_number_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="3">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="3"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/egyptian_blue"
+                android:textColor="@color/button_text_operation_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="x">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="×"
+                android:textSize="@dimen/button_text_size">
             </Button>
         </LinearLayout>
 
@@ -225,56 +257,61 @@
             android:id="@+id/linearLayout_fourthRow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2">
+            android:layout_weight="2"
+            android:layout_marginBottom="10dp">
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/tart_orange"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="C">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="C"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/dark_grey"
+                android:textColor="@color/button_text_number_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="0">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="0"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 app:backgroundTint="@null"
-                android:textColor="@color/egyptian_blue"
+                android:textColor="@color/button_text_operation_color"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="/">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="÷"
+                android:textSize="@dimen/button_text_size">
             </Button>
 
             <Button
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/calc_buttons"
+                android:background="@drawable/bg_calc_buttons"
                 android:layout_gravity="center"
-                android:scaleX="0.9"
-                android:scaleY="0.9"
-                android:text="=">
+                android:scaleX="@integer/button_scale_factor"
+                android:scaleY="@integer/button_scale_factor"
+                android:text="="
+                android:textSize="@dimen/button_text_size">
             </Button>
         </LinearLayout>
     </LinearLayout>
