--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,8 +22,9 @@
             android:layout_marginRight="5dp"
             android:background="@null"
             android:textAlignment="textEnd"
-            android:textSize="40sp"
-            android:inputType="none"></EditText>
+            android:textSize="50sp"
+            android:inputType="none"
+            android:maxLength="@integer/edittext_max_length"></EditText>
 
         <TextView
             android:id="@+id/calc_output"
@@ -31,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:textAlignment="textEnd"
-            android:textSize="22sp"></TextView>
+            android:textSize="30sp"></TextView>
     </LinearLayout>
 
     <LinearLayout
@@ -48,6 +49,7 @@
             android:layout_weight="1" /> <!-- Empty view for button alignement -->
 
         <ImageButton
+            android:id="@+id/delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
