--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,11 +7,22 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/app_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:titleTextColor="@color/white"
+        android:elevation="4dp"
+        app:menu="@menu/app_toolbar"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        android:theme="@style/Theme.Lab1Calc"/>
+
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/linearLayout_input_output"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="10"
+        android:layout_weight="6"
         android:orientation="vertical">
 
         <EditText
@@ -24,6 +35,7 @@
             android:textAlignment="textEnd"
             android:textSize="@dimen/edittext_input_text_size"
             android:inputType="none"
+            android:breakStrategy="balanced"
             android:maxLength="@integer/edittext_max_length"></EditText>
 
         <TextView
@@ -36,24 +48,24 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/linearLayout_delete_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout_input_output">
 
         <View
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_weight="1" /> <!-- Empty view for button alignement -->
+            android:layout_weight="1" /> <!-- Empty view for button alignment -->
 
         <ImageButton
             android:id="@+id/delete_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
-            android:layout_marginRight="5dp"
+            android:layout_marginRight="@dimen/button_shape_size"
             android:src="@drawable/ic_delete_button"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:onClick="onDeleteButton"></ImageButton>
@@ -63,7 +75,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout_delete_button"
         android:layout_weight="6">
 
         <LinearLayout
@@ -324,6 +336,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/bg_calc_buttons"
+                android:backgroundTint="@color/button_text_operation_color"
+                android:textColor="@color/white"
                 android:layout_gravity="center"
                 android:scaleX="@integer/button_scale_factor"
                 android:scaleY="@integer/button_scale_factor"
