Fix #6 : Added maximum precision for number (based on limits from exp4j) and scientific notation for output
Signed-off-by: Krow10 <23462475+Krow10@users.noreply.github.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,9 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
             android:textAlignment="textEnd"
-            android:textSize="@dimen/textview_output_text_size"></TextView>
+            android:textSize="@dimen/textview_output_text_size"
+            android:maxLength="@integer/textview_max_precision"> <!-- Exp4j maximum precision -->
+        </TextView>
     </LinearLayout>
 
     <LinearLayout
