--- a/app/src/main/res/values/main_activity_layout_constants.xml
+++ b/app/src/main/res/values/main_activity_layout_constants.xml
@@ -12,6 +12,7 @@
     <color name="button_text_number_color">@color/dark_grey</color>
     <color name="button_text_operation_color">@color/egyptian_blue</color>
     <integer name="edittext_max_length">200</integer>
+    <integer name="textview_max_precision">16</integer>
     <integer name="anim_input_scale_duration">150</integer>
     <integer name="delete_button_long_press_speed">100</integer>
 </resources>
