--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,7 +12,9 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimary</item>
         <!-- Customize your theme here. -->
-        <item name="android:textColorSecondary">@android:color/white</item>
         <item name="aboutStyle">@style/Widget.App.AboutPage</item>
+        <item name="android:colorControlActivated">@color/button_text_operation_color</item>
+        <item name="android:colorControlNormal">@android:color/tertiary_text_light</item>
+        <item name="android:textColorSecondary">@android:color/tertiary_text_light</item>
     </style>
 </resources>
