--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,11 +52,10 @@
 
     <LinearLayout
         android:id="@+id/linearLayout_delete_button"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout_input_output">
+        android:layout_marginBottom="10dp">
 
         <View
             android:layout_width="0dp"
